Agregando Logout y arreglos varios

--- a/MvmBlockchain/src/app/create-gen-declaration/create-gen-declaration.component.html
+++ b/MvmBlockchain/src/app/create-gen-declaration/create-gen-declaration.component.html
@@ -1,4 +1,6 @@
 <app-sidenav-agente></app-sidenav-agente>
+<app-logout></app-logout>
+
 <form class="form-signin" [formGroup]="messageForm">
 		<!DOCTYPE html>
 <html lang="en">
