--- a/MvmBlockchain/src/app/create-line-declaration/create-line-declaration.component.html
+++ b/MvmBlockchain/src/app/create-line-declaration/create-line-declaration.component.html
@@ -1,4 +1,5 @@
 <app-sidenav-agente></app-sidenav-agente>
+<app-logout></app-logout>
 <form class="form-signin" [formGroup]="messageForm">
 		<!DOCTYPE html>
 <html lang="en">
