--- a/MvmBlockchain/src/app/create-regulator/create-regulator.component.html
+++ b/MvmBlockchain/src/app/create-regulator/create-regulator.component.html
@@ -1,3 +1,4 @@
+<app-logout></app-logout>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
     <a href="Admin">Home</a>
