--- a/MvmBlockchain/src/app/view-condenser-declarations/view-condenser-declarations.component.html
+++ b/MvmBlockchain/src/app/view-condenser-declarations/view-condenser-declarations.component.html
@@ -1,4 +1,5 @@
 <app-sidenav-xm></app-sidenav-xm>
+<app-logout></app-logout>
 <div class="container">
   <h1>Declaraciones de Condensadores</h1>
   <ul>
