--- a/MvmBlockchain/src/app/view-gen-declarations/view-gen-declarations.component.html
+++ b/MvmBlockchain/src/app/view-gen-declarations/view-gen-declarations.component.html
@@ -1,4 +1,5 @@
 <app-sidenav-xm></app-sidenav-xm>
+<app-logout></app-logout>
 <div class="container">
     <h1>Declaraciones de Unidades de Generacion</h1>
     <ul>
