--- a/MvmBlockchain/src/app/xmloged/xmloged.component.html
+++ b/MvmBlockchain/src/app/xmloged/xmloged.component.html
@@ -1,3 +1,5 @@
+<app-logout></app-logout>
+
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
     <a href="XMUSER">Home</a>
