--- a/MvmBlockchain/src/app/app.component.scss
+++ b/MvmBlockchain/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .jumbotron {
     background-color: rgba(238, 238, 238, 0.829); ;
-    height: 100%;
-    width: 100%;
+    height: 100% auto;
+    width: 100% auto;
+
   }
